--- a/kanban-project/src/App.css
+++ b/kanban-project/src/App.css
@@ -732,13 +732,13 @@ body {
 .header__logo img {
   width: 85px;
 }
-.header__nav {
+/* .header__nav {
   max-width: 290px;
   padding: 0;
   display: flex;
   align-items: center;
   justify-content: center;
-}
+} */
 .header__btn-main-new {
   width: 178px;
   height: 30px;
