--- a/kanban-project/src/App.css
+++ b/kanban-project/src/App.css
@@ -792,20 +792,20 @@ body {
   z-index: 2;
 }
 
-.main {
+/* .main {
   width: 100%;
   background-color: #EAEEF6;
-}
-.main__block {
+} */
+/* .main__block {
   width: 100%;
   margin: 0 auto;
   padding: 25px 0 49px;
-}
-.main__content {
+} */
+/* .main__content {
   width: 100%;
   display: flex;
-}
-.main__column {
+} */
+/* .main__column {
   width: 20%;
   margin: 0 auto;
   display: block;
@@ -827,7 +827,7 @@ body {
   width: 100%;
   display: block;
   position: relative;
-}
+} */
 .cards__item {
   padding: 5px;
   animation-name: card-animation;
