--- a/kanban-project/main.css
+++ b/kanban-project/main.css
@@ -48,36 +48,34 @@ body {
   width: 100vw;
   min-height: 100vh;
   overflow: hidden;
-  background-color: #f1f1f1;
+  background-color: #F1F1F1;
 }
 
-/* .container {
+.container {
   max-width: 1260px;
   width: 100%;
   margin: 0 auto;
   padding: 0 30px;
-} */
+}
 
 ._hover01:hover {
   background-color: #33399b;
 }
 
-._hover02:hover,
-.header__user:hover {
+._hover02:hover, .header__user:hover {
   color: #33399b;
 }
-._hover02:hover::after,
-.header__user:hover::after {
+._hover02:hover::after, .header__user:hover::after {
   border-left-color: #33399b;
   border-bottom-color: #33399b;
 }
 
 ._hover03:hover {
   background-color: #33399b;
-  color: #ffffff;
+  color: #FFFFFF;
 }
 ._hover03:hover a {
-  color: #ffffff;
+  color: #FFFFFF;
 }
 
 .pop-user-set:target,
@@ -88,23 +86,23 @@ body {
 }
 
 ._orange {
-  background-color: #ffe4c2;
-  color: #ff6d00;
+  background-color: #FFE4C2;
+  color: #FF6D00;
 }
 
 ._green {
-  background-color: #b4fdd1;
-  color: #06b16e;
+  background-color: #B4FDD1;
+  color: #06B16E;
 }
 
 ._purple {
-  background-color: #e9d4ff;
-  color: #9a48f1;
+  background-color: #E9D4FF;
+  color: #9A48F1;
 }
 
 ._gray {
-  background: #94a6be;
-  color: #ffffff;
+  background: #94A6BE;
+  color: #FFFFFF;
 }
 
 ._active-category {
@@ -118,6 +116,7 @@ body {
 }
 
 .pop-exit {
+  display: none;
   width: 100%;
   height: 100%;
   min-width: 320px;
@@ -141,12 +140,12 @@ body {
 .pop-exit__block {
   display: block;
   margin: 0 auto;
-  background-color: #ffffff;
+  background-color: #FFFFFF;
   max-width: 370px;
   width: 100%;
   padding: 50px 60px;
   border-radius: 10px;
-  border: 0.7px solid #d4dbe5;
+  border: 0.7px solid #D4DBE5;
   box-shadow: 0px 4px 67px -12px rgba(0, 0, 0, 0.13);
 }
 .pop-exit__ttl h2 {
@@ -160,7 +159,7 @@ body {
 .pop-exit__exit-yes {
   width: 153px;
   height: 30px;
-  background-color: #565eef;
+  background-color: #565EEF;
   border-radius: 4px;
   border: none;
   outline: none;
@@ -171,13 +170,13 @@ body {
   line-height: 21px;
   font-weight: 500;
   letter-spacing: -0.14px;
-  color: #ffffff;
+  color: #FFFFFF;
   margin-right: 10px;
 }
 .pop-exit__exit-yes a {
   width: 100%;
   height: 100%;
-  color: #ffffff;
+  color: #FFFFFF;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -187,7 +186,7 @@ body {
   height: 30px;
   background-color: transparent;
   border-radius: 4px;
-  border: 0.7px solid var(--palette-navy-60, #565eef);
+  border: 0.7px solid var(--palette-navy-60, #565EEF);
   outline: none;
   display: flex;
   align-items: center;
@@ -196,12 +195,12 @@ body {
   line-height: 21px;
   font-weight: 500;
   letter-spacing: -0.14px;
-  color: #ffffff;
+  color: #FFFFFF;
 }
 .pop-exit__exit-no a {
   width: 100%;
   height: 100%;
-  color: #565eef;
+  color: #565EEF;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -222,7 +221,7 @@ body {
   margin-bottom: 4px;
 }
 .pop-user-set__mail {
-  color: #94a6be;
+  color: #94A6BE;
   font-size: 14px;
   line-height: 21px;
   letter-spacing: -0.14px;
@@ -240,18 +239,18 @@ body {
   line-height: 21px;
   letter-spacing: -0.14px;
 }
-.pop-user-set__theme input[type="checkbox"] {
+.pop-user-set__theme input[type=checkbox] {
   position: relative;
   width: 24px;
   height: 13px;
   border-radius: 100px;
-  background: #eaeef6;
+  background: #EAEEF6;
   outline: none;
   -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
+     -moz-appearance: none;
+          appearance: none;
 }
-.pop-user-set__theme input[type="checkbox"]::before {
+.pop-user-set__theme input[type=checkbox]::before {
   content: "";
   position: absolute;
   top: 1px;
@@ -259,22 +258,22 @@ body {
   width: 11px;
   height: 11px;
   border-radius: 50%;
-  background-color: #94a6be;
+  background-color: #94A6BE;
   transition: 0.5s;
 }
-.pop-user-set__theme input:checked[type="checkbox"]::before {
+.pop-user-set__theme input:checked[type=checkbox]::before {
   left: 12px;
 }
 .pop-user-set button {
   width: 72px;
   height: 30px;
   background: transparent;
-  color: #565eef;
+  color: #565EEF;
   border-radius: 4px;
-  border: 1px solid #565eef;
+  border: 1px solid #565EEF;
 }
 .pop-user-set button a {
-  color: #565eef;
+  color: #565EEF;
 }
 
 .pop-new-card {
@@ -302,12 +301,12 @@ body {
 .pop-new-card__block {
   display: block;
   margin: 0 auto;
-  background-color: #ffffff;
+  background-color: #FFFFFF;
   max-width: 630px;
   width: 100%;
   padding: 40px 30px 48px;
   border-radius: 10px;
-  border: 0.7px solid #d4dbe5;
+  border: 0.7px solid #D4DBE5;
   position: relative;
 }
 .pop-new-card__content {
@@ -325,7 +324,7 @@ body {
   position: absolute;
   top: 20px;
   right: 30px;
-  color: #94a6be;
+  color: #94A6BE;
   cursor: pointer;
 }
 .pop-new-card__close:hover {
@@ -347,8 +346,7 @@ body {
   display: flex;
   flex-direction: column;
 }
-.form-new__input,
-.form-new__area {
+.form-new__input, .form-new__area {
   width: 100%;
   outline: none;
   padding: 14px;
@@ -359,20 +357,18 @@ body {
   line-height: 1;
   letter-spacing: -0.14px;
 }
-.form-new__input::-moz-placeholder,
-.form-new__area::-moz-placeholder {
+.form-new__input::-moz-placeholder, .form-new__area::-moz-placeholder {
   font-weight: 400;
   font-size: 14px;
   line-height: 1px;
-  color: #94a6be;
+  color: #94A6BE;
   letter-spacing: -0.14px;
 }
-.form-new__input::placeholder,
-.form-new__area::placeholder {
+.form-new__input::placeholder, .form-new__area::placeholder {
   font-weight: 400;
   font-size: 14px;
   line-height: 1px;
-  color: #94a6be;
+  color: #94A6BE;
   letter-spacing: -0.14px;
 }
 .form-new__input {
@@ -386,14 +382,14 @@ body {
 .form-new__create {
   width: 132px;
   height: 30px;
-  background-color: #565eef;
+  background-color: #565EEF;
   border-radius: 4px;
   border: 0;
   outline: none;
   font-size: 14px;
   font-weight: 500;
   line-height: 1;
-  color: #ffffff;
+  color: #FFFFFF;
   float: right;
 }
 
@@ -413,7 +409,7 @@ body {
   padding: 0 7px;
 }
 .calendar__p {
-  color: #94a6be;
+  color: #94A6BE;
   font-size: 10px;
   line-height: 1;
 }
@@ -424,7 +420,7 @@ body {
   display: block;
 }
 .calendar__month {
-  color: #94a6be;
+  color: #94A6BE;
   font-size: 14px;
   line-height: 25px;
   font-weight: 600;
@@ -441,7 +437,7 @@ body {
   padding: 0 7px;
 }
 .calendar__day-name {
-  color: #94a6be;
+  color: #94A6BE;
   font-size: 10px;
   font-weight: 500;
   line-height: normal;
@@ -462,7 +458,7 @@ body {
   flex-wrap: nowrap;
   align-items: center;
   justify-content: center;
-  color: #94a6be;
+  color: #94A6BE;
   font-size: 10px;
   line-height: 1;
   letter-spacing: -0.2px;
@@ -494,7 +490,7 @@ body {
   justify-content: center;
 }
 .nav__action svg {
-  fill: #94a6be;
+  fill: #94A6BE;
 }
 
 ._other-month {
@@ -502,13 +498,13 @@ body {
 }
 
 ._cell-day:hover {
-  color: #94a6be;
-  background-color: #eaeef6;
+  color: #94A6BE;
+  background-color: #EAEEF6;
 }
 
 ._active-day {
-  background-color: #94a6be;
-  color: #ffffff;
+  background-color: #94A6BE;
+  color: #FFFFFF;
 }
 
 ._current {
@@ -544,6 +540,7 @@ body {
 }
 
 .pop-browse {
+  display: none;
   width: 100%;
   height: 100%;
   min-width: 375px;
@@ -567,12 +564,12 @@ body {
 .pop-browse__block {
   display: block;
   margin: 0 auto;
-  background-color: #ffffff;
+  background-color: #FFFFFF;
   max-width: 630px;
   width: 100%;
   padding: 40px 30px 38px;
   border-radius: 10px;
-  border: 0.7px solid #d4dbe5;
+  border: 0.7px solid #D4DBE5;
   position: relative;
 }
 .pop-browse__content {
@@ -612,21 +609,18 @@ body {
   display: block;
   margin-bottom: 20px;
 }
-.pop-browse__btn-browse,
-.pop-browse__btn-edit {
+.pop-browse__btn-browse, .pop-browse__btn-edit {
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
   justify-content: space-between;
 }
-.pop-browse__btn-browse button,
-.pop-browse__btn-edit button {
+.pop-browse__btn-browse button, .pop-browse__btn-edit button {
   height: 30px;
   margin-bottom: 10px;
   padding: 0 14px;
 }
-.pop-browse__btn-browse .btn-group button,
-.pop-browse__btn-edit .btn-group button {
+.pop-browse__btn-browse .btn-group button, .pop-browse__btn-edit .btn-group button {
   margin-right: 8px;
 }
 
@@ -639,7 +633,7 @@ body {
   width: 100%;
   outline: none;
   padding: 14px;
-  background: #eaeef6;
+  background: #EAEEF6;
   border: 0.7px solid rgba(148, 166, 190, 0.4);
   border-radius: 8px;
   font-size: 14px;
@@ -652,14 +646,14 @@ body {
   font-weight: 400;
   font-size: 14px;
   line-height: 1px;
-  color: #94a6be;
+  color: #94A6BE;
   letter-spacing: -0.14px;
 }
 .form-browse__area::placeholder {
   font-weight: 400;
   font-size: 14px;
   line-height: 1px;
-  color: #94a6be;
+  color: #94A6BE;
   letter-spacing: -0.14px;
 }
 
@@ -678,7 +672,7 @@ body {
 .status__theme {
   border-radius: 24px;
   border: 0.7px solid rgba(148, 166, 190, 0.4);
-  color: #94a6be;
+  color: #94A6BE;
   padding: 11px 14px 10px;
   margin-right: 7px;
   margin-bottom: 7px;
@@ -691,24 +685,24 @@ body {
 
 ._btn-bor {
   border-radius: 4px;
-  border: 0.7px solid var(--palette-navy-60, #565eef);
+  border: 0.7px solid var(--palette-navy-60, #565EEF);
   outline: none;
   background: transparent;
-  color: #565eef;
+  color: #565EEF;
 }
 ._btn-bor a {
-  color: #565eef;
+  color: #565EEF;
 }
 
 ._btn-bg {
   border-radius: 4px;
-  background: #565eef;
+  background: #565EEF;
   border: none;
   outline: none;
-  color: #ffffff;
+  color: #FFFFFF;
 }
 ._btn-bg a {
-  color: #ffffff;
+  color: #FFFFFF;
 }
 
 ._hide {
@@ -719,12 +713,12 @@ body {
   display: none;
 }
 
-/* .header {
+.header {
   width: 100%;
   margin: 0 auto;
   background-color: #FFFFFF;
-} */
-/* .header__block {
+}
+.header__block {
   height: 70px;
   display: flex;
   flex-wrap: nowrap;
@@ -734,23 +728,23 @@ body {
   top: 0;
   left: 0;
   padding: 0 10px;
-} */
+}
 .header__logo img {
   width: 85px;
 }
-/* .header__nav {
+.header__nav {
   max-width: 290px;
   padding: 0;
   display: flex;
   align-items: center;
   justify-content: center;
-} */
+}
 .header__btn-main-new {
   width: 178px;
   height: 30px;
   border-radius: 4px;
-  background-color: #565eef;
-  color: #ffffff;
+  background-color: #565EEF;
+  color: #FFFFFF;
   border: none;
   font-size: 14px;
   line-height: 1;
@@ -758,7 +752,7 @@ body {
   margin-right: 20px;
 }
 .header__btn-main-new a {
-  color: #ffffff;
+  color: #FFFFFF;
 }
 .header__user {
   height: 20px;
@@ -768,7 +762,7 @@ body {
   justify-content: center;
   font-size: 14px;
   line-height: 20px;
-  color: #565eef;
+  color: #565EEF;
 }
 .header__user::after {
   content: "";
@@ -776,14 +770,14 @@ body {
   width: 6px;
   height: 6px;
   border-radius: 1px;
-  border-left: 1.9px solid #565eef;
-  border-bottom: 1.9px solid #565eef;
+  border-left: 1.9px solid #565EEF;
+  border-bottom: 1.9px solid #565EEF;
   transform: rotate(-45deg);
   margin: -6px 0 0 5px;
   padding: 0;
 }
 .header__pop-user-set {
-  display: block;
+  display: none;
   position: absolute;
   top: 61px;
   right: 0;
@@ -791,27 +785,27 @@ body {
   height: 205px;
   border-radius: 10px;
   border: 0.7px solid rgba(148, 166, 190, 0.4);
-  background: #fff;
+  background: #FFF;
   box-shadow: 0px 10px 39px 0px rgba(26, 56, 101, 0.21);
   padding: 34px;
   text-align: center;
   z-index: 2;
 }
 
-/* .main {
+.main {
   width: 100%;
   background-color: #EAEEF6;
-} */
-/* .main__block {
+}
+.main__block {
   width: 100%;
   margin: 0 auto;
   padding: 25px 0 49px;
-} */
-/* .main__content {
+}
+.main__content {
   width: 100%;
   display: flex;
-} */
-/* .main__column {
+}
+.main__column {
   width: 20%;
   margin: 0 auto;
   display: block;
@@ -833,14 +827,14 @@ body {
   width: 100%;
   display: block;
   position: relative;
-} */
-/* .cards__item {
+}
+.cards__item {
   padding: 5px;
   animation-name: card-animation;
   animation-duration: 500ms;
   animation-timing-function: linear;
-} */
-/* .cards__card {
+}
+.cards__card {
   width: 220px;
   height: 130px;
   background-color: #FFFFFF;
@@ -850,16 +844,16 @@ body {
   align-items: flex-start;
   justify-content: stretch;
   padding: 15px 13px 19px;
-} */
+}
 
-/* .card__group {
+.card__group {
   width: 100%;
   height: 20px;
   margin-bottom: 12px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-} */
+}
 .card__theme {
   width: auto;
   height: 20px;
@@ -883,7 +877,7 @@ body {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background-color: #94a6be;
+  background-color: #94A6BE;
 }
 .card__title {
   font-size: 14px;
@@ -892,26 +886,26 @@ body {
   color: #000000;
   margin-bottom: 10px;
 }
-/* .card__content {
+.card__content {
   height: 64px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-between;
-} */
-/* .card__date {
+}
+.card__date {
   display: flex;
   align-items: center;
   justify-content: flex-start;
-} */
-/* .card__date svg {
+}
+.card__date svg {
   width: 13px;
-} */
+}
 .card__date p {
   margin-left: 6px;
   font-size: 10px;
   line-height: 13px;
-  color: #94a6be;
+  color: #94A6BE;
   letter-spacing: 0.2px;
 }
 
@@ -937,7 +931,7 @@ body {
   .cards__card {
     width: 220px;
     height: 130px;
-    background-color: #ffffff;
+    background-color: #FFFFFF;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
@@ -964,9 +958,7 @@ body {
     max-width: 340px;
     width: 100%;
   }
-  .calendar__ttl,
-  .calendar__nav,
-  .calendar__period {
+  .calendar__ttl, .calendar__nav, .calendar__period {
     padding: 0;
   }
   .calendar .date-create {
@@ -1060,17 +1052,14 @@ body {
   .pop-browse__calendar {
     width: 100%;
   }
-  .pop-browse__btn-browse button,
-  .pop-browse__btn-edit button {
+  .pop-browse__btn-browse button, .pop-browse__btn-edit button {
     width: 100%;
     height: 40px;
   }
-  .pop-browse__btn-browse .btn-group,
-  .pop-browse__btn-edit .btn-group {
+  .pop-browse__btn-browse .btn-group, .pop-browse__btn-edit .btn-group {
     width: 100%;
   }
-  .pop-browse__btn-browse .btn-group button,
-  .pop-browse__btn-edit .btn-group button {
+  .pop-browse__btn-browse .btn-group button, .pop-browse__btn-edit .btn-group button {
     margin-right: 0px;
   }
   .form-browse__area {
