--- a/kanban-project/signin.css
+++ b/kanban-project/signin.css
@@ -37,7 +37,7 @@ a {
   font-family: "Roboto", sans-serif;
 }
 
-.wrapper {
+/* .wrapper {
   width: 100%;
   height: 100%;
   overflow-x: hidden;
@@ -65,8 +65,8 @@ a {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-}
-.modal__block {
+} */
+/* .modal__block {
   display: block;
   margin: 0 auto;
   background-color: #FFFFFF;
@@ -76,16 +76,16 @@ a {
   border-radius: 10px;
   border: 0.7px solid #D4DBE5;
   box-shadow: 0px 4px 67px -12px rgba(0, 0, 0, 0.13);
-}
-.modal__ttl h2 {
+} */
+/* .modal__ttl h2 {
   text-align: center;
   font-size: 20px;
   font-weight: 700;
   line-height: 30px;
   letter-spacing: -0.6px;
   margin-bottom: 20px;
-}
-.modal__form-login {
+} */
+/* .modal__form-login {
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -94,8 +94,8 @@ a {
 }
 .modal__form-login input:first-child {
   margin-bottom: 7px;
-}
-.modal__input {
+} */
+/* .modal__input {
   width: 100%;
   min-width: 100%;
   border-radius: 8px;
@@ -110,16 +110,16 @@ a {
   line-height: 21px;
   letter-spacing: -0.28px;
   color: #94A6BE;
-}
-.modal__input::placeholder {
+} */
+/* .modal__input::placeholder {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 14px;
   line-height: 21px;
   letter-spacing: -0.28px;
   color: #94A6BE;
-}
-.modal__btn-enter {
+} */
+/* .modal__btn-enter {
   width: 100%;
   height: 30px;
   background-color: #565EEF;
@@ -136,16 +136,16 @@ a {
   font-weight: 500;
   letter-spacing: -0.14px;
   color: #FFFFFF;
-}
-.modal__btn-enter a {
+} */
+/* .modal__btn-enter a {
   width: 100%;
   height: 100%;
   color: #FFFFFF;
   display: flex;
   align-items: center;
   justify-content: center;
-}
-.modal__form-group {
+} */
+/* .modal__form-group {
   text-align: center;
 }
 .modal__form-group p,
@@ -158,7 +158,7 @@ a {
 }
 .modal__form-group a {
   text-decoration: underline;
-}
+} */
 
 @media screen and (max-width: 375px) {
   .modal {
