--- a/kanban-project/src/App.css
+++ b/kanban-project/src/App.css
@@ -196,7 +196,7 @@ body {
   line-height: 21px;
   font-weight: 500;
   letter-spacing: -0.14px;
-  color: #ffffff;
+  color: #565eef;
 }
 .pop-exit__exit-no a {
   width: 100%;
@@ -210,7 +210,7 @@ body {
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 .pop-user-set__name {
